-------------------------------------------------------------------------------
Changes in version 1.31

- Improved handling of interrupted transfers.  Closing the command
  channel or sending another command will interrupt any data transfer in
  progress.

Development of this version has been sponsored by FutureQuest, Inc.
ossi@FutureQuest.net  http://www.FutureQuest.net/
-------------------------------------------------------------------------------
Changes in version 1.30

- Switched to the CVM v2 client library.

- Added a $AUTH_ATTEMPTS control to twoftpd-auth to limit the number of
  authentication attempts per session.

- Rewrote the directory listing code to fix listing files with special
  characters in their names.

- Added a transfer rate (bytes/sec) indicator to transfer logs.

Development of this version has been sponsored by FutureQuest, Inc.
ossi@FutureQuest.net  http://www.FutureQuest.net/
-------------------------------------------------------------------------------
Changes in version 1.21

- Added a fake listing routine to twoftpd-drop, to avoid errors on GUI
  clients that require LIST or NLST.

- Fixed a compile failure on FreeBSD in the newer MDTM command.
  Thanks Sergei Kolobov.

Development of this version has been sponsored by FutureQuest, Inc.
ossi@FutureQuest.net  http://www.FutureQuest.net/
-------------------------------------------------------------------------------
Changes in version 1.20

- Modified the backends (twoftpd-auth and twoftpd-xfer) to show a 220
  banner if the front end authenticated, and 230 if not.  This fixes
  problems some FTP clients have when running twoftpd-anon after
  authentication.

- Added twoftpd-drop, a write-only FTP server.

- Added twoftpd-switch, a tool to choose between twoftpd-anon,
  twoftpd-drop, and twoftpd-xfer based on the value of $SHELL,
  $SHELL_READONLY, and $SHELL_WRITEONLY.

- Make sure to open only regular files.

- Added a MDTM command to the xfer backend that can set timestamps