@@ -46,7 +46,6 @@ extern void show_message_file(unsigned code);
 extern str fullpath;
 extern int qualify_validate(const char* path);
 extern int open_fd(const char* filename, int flags, int mode);
-extern int open_in(ibuf* in, const char* filename);
 
 /* In retr.c */
 extern unsigned long startpos;
