@@ -1,6 +1,8 @@
 -------------------------------------------------------------------------------
 Changes in version 1.31
 
+- Fixed a longstanding bug in the handling of $MESSAGEFILE
+
 - Improved handling of interrupted transfers.  Closing the command
   channel or sending another command will interrupt any data transfer in
   progress.
